WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171745
WebKit should default to using sRGB with NSColor conversion instead of device color space
https://bugs.webkit.org/show_bug.cgi?id=171745
Summary
WebKit should default to using sRGB with NSColor conversion instead of device...
Beth Dakin
Reported
2017-05-05 13:16:04 PDT
WebKit should maintain colorspaces that it understands on NSColors We need this in order to get the highlight ring on the TouchBar color picker to work.
rdar://problem/28314183
Attachments
Patch
(2.15 KB, patch)
2017-05-05 13:18 PDT
,
Beth Dakin
no flags
Details
Formatted Diff
Diff
Patch
(2.42 KB, patch)
2017-05-05 14:14 PDT
,
Beth Dakin
thorton
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-elcapitan
(1.00 MB, application/zip)
2017-05-05 15:21 PDT
,
Build Bot
no flags
Details
Patch with new test results
(19.96 KB, patch)
2017-05-05 16:17 PDT
,
Beth Dakin
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-elcapitan
(1.10 MB, application/zip)
2017-05-05 17:12 PDT
,
Build Bot
no flags
Details
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2017-05-05 13:18:35 PDT
Created
attachment 309201
[details]
Patch
Tim Horton
Comment 2
2017-05-05 13:36:30 PDT
Comment on
attachment 309201
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=309201&action=review
> Source/WebCore/platform/graphics/mac/ColorMac.mm:64 > + if (color.colorSpace == [NSColorSpace sRGBColorSpace])
Please use isEqual.
Simon Fraser (smfr)
Comment 3
2017-05-05 13:38:05 PDT
Comment on
attachment 309201
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=309201&action=review
> Source/WebCore/platform/graphics/mac/ColorMac.mm:64 > + if (color.colorSpace == [NSColorSpace sRGBColorSpace])
This should use isEqual(To?): right?
> Source/WebCore/platform/graphics/mac/ColorMac.mm:67 > + rgbColor = [color colorUsingColorSpaceName:NSDeviceRGBColorSpace];
Is this equivalent to NSCalibratedRGBColorSpace and which is sRGB?
Beth Dakin
Comment 4
2017-05-05 13:41:43 PDT
(In reply to Simon Fraser (smfr) from
comment #3
)
> Comment on
attachment 309201
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=309201&action=review
> > > Source/WebCore/platform/graphics/mac/ColorMac.mm:64 > > + if (color.colorSpace == [NSColorSpace sRGBColorSpace]) > > This should use isEqual(To?): right? >
Yup, fixing.
> > Source/WebCore/platform/graphics/mac/ColorMac.mm:67 > > + rgbColor = [color colorUsingColorSpaceName:NSDeviceRGBColorSpace]; > > Is this equivalent to NSCalibratedRGBColorSpace and which is sRGB?
I'm not sure. This is what we have always done in this function before this patch.
Simon Fraser (smfr)
Comment 5
2017-05-05 13:44:18 PDT
Comment on
attachment 309201
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=309201&action=review
>>> Source/WebCore/platform/graphics/mac/ColorMac.mm:67 >>> + rgbColor = [color colorUsingColorSpaceName:NSDeviceRGBColorSpace]; >> >> Is this equivalent to NSCalibratedRGBColorSpace and which is sRGB? > > I'm not sure. This is what we have always done in this function before this patch.
Let's use colorUsingColorSpace:[NSColorSpace sRGBColorSpace]
Beth Dakin
Comment 6
2017-05-05 14:14:11 PDT
Created
attachment 309206
[details]
Patch
Build Bot
Comment 7
2017-05-05 15:21:05 PDT
Comment on
attachment 309206
[details]
Patch
Attachment 309206
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3681199
New failing tests: editing/mac/attributed-string/comment-cdata-section.html editing/mac/attributed-string/font-style-variant-effect.html editing/mac/attributed-string/font-weight.html editing/mac/attributed-string/letter-spacing.html editing/mac/attributed-string/vertical-align.html editing/mac/attributed-string/text-decorations.html editing/mac/attributed-string/font-size.html editing/mac/attributed-string/anchor-element.html editing/mac/attributed-string/basic.html
Build Bot
Comment 8
2017-05-05 15:21:06 PDT
Created
attachment 309221
[details]
Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Tim Horton
Comment 9
2017-05-05 15:27:52 PDT
I think those can be safely rebaselined.
Beth Dakin
Comment 10
2017-05-05 16:17:48 PDT
Created
attachment 309236
[details]
Patch with new test results For the bots to try.
Build Bot
Comment 11
2017-05-05 17:12:24 PDT
Comment on
attachment 309236
[details]
Patch with new test results
Attachment 309236
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3681987
New failing tests: editing/mac/attributed-string/font-style-variant-effect.html
Build Bot
Comment 12
2017-05-05 17:12:25 PDT
Created
attachment 309246
[details]
Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Beth Dakin
Comment 13
2017-05-08 13:26:38 PDT
https://trac.webkit.org/changeset/216449/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug