WebKit should default to using sRGB with NSColor conversion instead of device color space https://bugs.webkit.org/show_bug.cgi?id=171745 -and corresponding- rdar://problem/28314183

Reviewed by Tim Horton.

Source/WebCore:

* platform/graphics/mac/ColorMac.mm:
(WebCore::makeRGBAFromNSColor):
(WebCore::nsColor):

LayoutTests:

* editing/mac/attributed-string/anchor-element-expected.txt:
* editing/mac/attributed-string/basic-expected.txt:
* editing/mac/attributed-string/comment-cdata-section-expected.txt:
* editing/mac/attributed-string/font-size-expected.txt:
* editing/mac/attributed-string/font-style-variant-effect-expected.txt:
* editing/mac/attributed-string/font-weight-expected.txt:
* editing/mac/attributed-string/letter-spacing-expected.txt:
* editing/mac/attributed-string/text-decorations-expected.txt:
* editing/mac/attributed-string/vertical-align-expected.txt:



Canonical link: https://commits.webkit.org/188734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216449 268f45cc-cd09-0410-ab3c-d52691b4dbfc